--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 La línea de pinturas Cibel se vende en pinturerías, ferreterías, corralones y mayoristas.
               </p>
             </div>
-            <a ng-click="showHistorySection()" class="blue-button">historia</a>
+            <a ng-click="showHistorySection()" class="text-button">historia</a>
           </div>
 
           <div class="company-box">
@@ -215,7 +215,7 @@
                 Nuestra actividad como compañia química presenta un gran impacto en el desarrollo social de nuestro país, y específicamente en la comunidad en la que desarrollamos nuestra actividad.
               </p>
             </div>
-            <a ng-click="showSocialSection()" class="blue-button">un mundo mejor</a>
+            <a ng-click="showSocialSection()" class="text-button">un mundo mejor</a>
           </div>
         </div>
       </div>
