--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Quattrocento' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet/less" type="text/css" href="styles/less/index.less" />
   <link rel="icon" type="image/ico" href="assets/images/favicon.ico">
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script type="text/javascript" src="dist/bundle.js"></script>
 
+
+  <!--
+  <link rel="stylesheet/less" type="text/css" href="styles/less/index.less" />
   <script>less = { env: 'development'};</script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.6.1/less.min.js"></script>
   <script>less.watch();</script>
 
-  <!--
   <link rel="stylesheet" href="styles/css/index.css">
   -->
+  <link rel="stylesheet" href="dist/bundle.css">
   <link rel="stylesheet" href="assets/fonts/icons/style.css">
 </head>
 
