--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-  <base href="/" target="_blank">
+  <base href="http://waaws.space/partners/cibel/" target="_blank">
   <meta charset="utf-8">
 
   <title>Cibel</title>
