--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <title>Cibel</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
+  <link rel="stylesheet" href="assets/fonts/font-awesome/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Quattrocento' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -240,7 +241,7 @@
     </section>
 
     <section class="foot">
-    </section>      
+    </section>
 
     <footer id="contact" class="footer">
       <div class="footer-content">
