--- a/index.html
+++ b/index.html
@@ -162,23 +162,30 @@
 
     <section id="advice" class="advice">
       <div class="layout">
-        <h1 class="title">consejos</h1>
-
+        <div class="titlewithline">
+            <div class="line"></div>
+            <h1 class="title">consejos</h1>
+            <div class="line"></div>
+        </div>
         <div class="advice-buttons-wrapper">
-          <button ng-click="openAdviceModal(1);" class="white-button">Antes de empezar</button>
-          <button ng-click="openAdviceModal(2);" class="white-button">Reglas</button>
-          <button ng-click="openAdviceModal(3);" class="white-button">Preparación de superficies sin pintar</button>
-          <button ng-click="openAdviceModal(4);" class="white-button">Mantenimiento</button>
-          <button ng-click="openAdviceModal(5);" class="white-button">Problemas comunes de la pintura</button>
-          <button ng-click="openAdviceModal(6);" class="white-button">Aplicación</button>
-          <button ng-click="openAdviceModal(7);" class="white-button">Herramientas</button>
+          <button ng-click="openAdviceModal(1);" class="white-button"><i class="icon-paint-1" aria-hidden="true"></i> Antes de empezar</button>
+          <button ng-click="openAdviceModal(2);" class="white-button"><i class="icon-painting" aria-hidden="true"></i> Reglas</button>
+          <button ng-click="openAdviceModal(3);" class="white-button"><i class="icon-uso"></i> Preparación de superficies sin pintar</button>
+          <button ng-click="openAdviceModal(4);" class="white-button"><i class="icon-rendimiento"></i> Mantenimiento</button>
+          <button ng-click="openAdviceModal(5);" class="white-button"><i class="fa fa-exclamation" aria-hidden="true"></i> Problemas comunes de la pintura</button>
+          <button ng-click="openAdviceModal(6);" class="white-button"><i class="icon-entonadores" aria-hidden="true"></i> Aplicación</button>
+          <button ng-click="openAdviceModal(7);" class="white-button"><i class="icon-resistencia " aria-hidden="true"></i> Herramientas</button>
         </div>
       </div>
     </section>
 
     <section id="inspiration" class="inspiration">
       <div class="layout">
-        <h1 class="title">inspiración</h1>
+        <div class="titlewithline">
+            <div class="line"></div>
+            <h1 class="title">inspiración</h1>
+            <div class="line"></div>
+        </div>
 
         <div class="inspiration-box-wrapper">
           <div class="inspiration-box">
