--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <base href="/" target="_blank">
   <meta charset="utf-8">
 
-  <title>Cibel</title>
+  <title>Pinturas Cibel</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="assets/fonts/font-awesome/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
