--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <h3 class="footer-title">contacto</h3>
           <p class="footer-text">Calle Talcahuano 359,</p>
           <p class="footer-text">Ciudad Madero, Buenos Aires</p>
-          <p class="footer-text">Teléfono: 4442-9970</p>
+          <p class="footer-text">Teléfono:  (+54) (11) 4442-9970</p>
           <p class="footer-text">consultas@pinturascibel.com.ar</p>
         </div>
       </div>
